@@ -15,7 +15,8 @@ my $qpdf = $ENV{'QPDF_BIN'} or die;
 
 $td->runtest("linearize",
 	     {$td->COMMAND => "pdf-linearize input.pdf '' a.pdf"},
-	     {$td->STRING => "", $td->EXIT_STATUS => 0});
+	     {$td->REGEXP => '(?s).*input\.pdf progress: \d+\%.*',
+                  $td->EXIT_STATUS => 0});
 
 $td->runtest("check",
 	     {$td->COMMAND => "$qpdf --check a.pdf"},
